--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ opencv-python>=4.8.0,<4.9.0
 loguru>=0.7.0,<0.8.0
 pydantic>=2.6.0,<3.0.0
 pydantic-settings>=2.2.1,<3.0.0
+scikit-image>=0.22.0,<0.23.0
+Pillow>=10.2.0,<11.0.0
