--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 FACE_V3_ENV=local
 FACE_V3_APP_NAME=Face Search Backend
 FACE_V3_API_PREFIX=/api/v1
+FACE_V3_API_KEY=
 FACE_V3_TRITON_URL=triton:8001
 FACE_V3_DETECTION_MODEL_NAME=detection
 FACE_V3_EXTRACTION_MODEL_NAME=extraction
